# dforth

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
forth/: forth.h
scripts/: INCLUDE.f  INCLUDE_INCLUDE.f
test/: eval_check.h  log_capture.cpp  log_capture.h  tests.cpp
tests/: eval_check.h  log_capture.cpp  log_capture.h  tests.c  tests.cpp
